chore: run virtual threads with other scheduler